Django/network/AllowPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all-ingress
  namespace: dev
spec:
  podSelector: 
    matchLabels:
      app: web
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: was-allow-web-ingress
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: was
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
